--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
   firebase_database:
-
+  google_maps_flutter: 1.0.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
@@ -58,6 +58,17 @@ flutter:
     - ic_mail.png
     - ic_car_green.png
     - ic_car_red.png
+    - ic_menu.png
+    - ic_notify.png
+    - ic_location_black.png
+    - ic_location_blue.png
+    - ic_close.png
+    - ic_menu_user.png
+    - ic_menu_history.png
+    - ic_menu_help.png
+    - ic_menu_percent.png
+    - ic_menu_logout.png
+    - ic_menu_notify.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
